--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -37,3 +37,14 @@ jobs:
         with:
           name: app-debug
           path: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload to Firebase App Distribution
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        run: |
+          echo "${FIREBASE_TOKEN}" > ${HOME}/firebase.json
+          firebase auth:login:ci
+          firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
+            --app 1:162093106925:android:7c11cdbc79a721f3e22ee4  \
+            --release-notes "New build from GitHub Actions" \
+            --testers "Karanveer@crebos.online"
