--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -25,9 +24,6 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-#
-#      - name: Build with Gradle
-#        run: ./gradlew build
 
       - name: Build Debug APK
         run: ./gradlew assembleDebug
@@ -43,11 +39,10 @@ jobs:
 
       - name: Upload to Firebase App Distribution
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
         run: |
-          echo "${FIREBASE_TOKEN}" > ${HOME}/firebase.json
-          firebase auth:login:ci
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
           firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
-            --app 1:162093106925:android:7c11cdbc79a721f3e22ee4  \
+            --app 1:162093106925:android:7c11cdbc79a721f3e22ee4 \
             --release-notes "New build from GitHub Actions" \
             --testers "Karanveer@crebos.online"
