--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -28,6 +28,19 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
+      - name: Build Android Test APK
+        run: ./gradlew assembleDebugAndroidTest
+
+      - name: Upload test apk t browserStack
+        run: |
+          curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
+          -X POST "https://api-cloud.browserstack.com/app-automate/espresso/v2/build" \
+          -F "app=@app/build/outputs/apk/debug/app-debug.apk" \
+          -F "tests=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk" \
+          -F "devices=Google Pixel 7-12.0" \
+          -F "deviceLogs=true" \
+          -F "networkLogs=true"
+
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
@@ -45,4 +58,4 @@ jobs:
           firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
             --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
             --release-notes "New build from GitHub Actions" \
-            --testers "Karanveer@crebos.online"
+            --groups 'internal-testers'
