--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -50,12 +50,29 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
+#      - name: Upload to Firebase App Distribution
+#        env:
+#          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
+#        run: |
+#          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
+#          firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
+#            --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
+#            --release-notes "New build from GitHub Actions" \
+#            --groups 'internal-testers'
+
       - name: Upload to Firebase App Distribution
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account-key.json
         run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
+          # Create service account key file from secret
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}' > service-account-key.json
+          
+          # Upload to Firebase App Distribution
           firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
             --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
-            --release-notes "New build from GitHub Actions" \
-            --groups 'internal-testers'
+            --release-notes "New build from GitHub Actions - ${{ github.sha }}" \
+            --groups 'internal-testers' \
+            --token ${{ secrets.FIREBASE_TOKEN }}
+
+      - name: Cleanup
+        run: rm -f service-account-key.json
