--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -60,19 +60,23 @@ jobs:
 #            --release-notes "New build from GitHub Actions" \
 #            --groups 'internal-testers'
 
+      - name: Fetch Firebase Testers
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          FIREBASE_TESTERS: ${{ secrets.FIREBASE_TESTERS }}
+        run: |
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
+          ./fetch-firebase-testers.sh
+
       - name: Upload to Firebase App Distribution
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account-key.json
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
         run: |
-          # Create service account key file from secret
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}' > service-account-key.json
-          
-          # Upload to Firebase App Distribution
           firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
             --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
-            --release-notes "New build from GitHub Actions - ${{ github.sha }}" \
-            --groups 'internal-testers' \
-#            --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+            --release-notes "New build from GitHub Actions" \
+            --testers "$TESTERS"
 
       - name: Cleanup
         run: rm -f service-account-key.json
