--- a/.github/workflows/android-ci-simple.yaml
+++ b/.github/workflows/android-ci-simple.yaml
@@ -31,15 +31,65 @@ jobs:
       - name: Build Android Test APK
         run: ./gradlew assembleDebugAndroidTest
 
-      - name: Upload test apk to browserStack
+      - name: Upload APK to BrowserStack
+        id: upload-apk
         run: |
+          echo "📱 Uploading APK to BrowserStack..."
+          RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
+            -F "file=@app/build/outputs/apk/debug/app-debug.apk")
+          
+          echo "Response: $RESPONSE"
+          
+          # Extract app_id from response
+          APP_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
+          
+          if [ -z "$APP_ID" ]; then
+            echo "❌ Failed to get app_id from response"
+            echo "Full response: $RESPONSE"
+            exit 1
+          fi
+          
+          echo "✅ APK uploaded successfully. App ID: $APP_ID"
+          echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
+
+      - name: Upload Test APK to BrowserStack
+        id: upload-test-apk
+        run: |
+          echo "🧪 Uploading Test APK to BrowserStack..."
+          RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
+            -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk")
+          
+          echo "Response: $RESPONSE"
+          
+          # Extract test_id from response
+          TEST_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
+          
+          if [ -z "$TEST_ID" ]; then
+            echo "❌ Failed to get test_id from response"
+            echo "Full response: $RESPONSE"
+            exit 1
+          fi
+          
+          echo "✅ Test APK uploaded successfully. Test ID: $TEST_ID"
+          echo "test_id=$TEST_ID" >> $GITHUB_OUTPUT
+
+      - name: Run BrowserStack Tests
+        run: |
+          echo "🚀 Running tests on BrowserStack..."
+          echo "App ID: ${{ steps.upload-apk.outputs.app_id }}"
+          echo "Test ID: ${{ steps.upload-test-apk.outputs.test_id }}"
+          
           curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-          -X POST "https://api-cloud.browserstack.com/app-automate/espresso/v2/build" \
-          -F "app=@app/build/outputs/apk/debug/app-debug.apk" \
-          -F "tests=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk" \
-          -F "devices=Google Pixel 7-12.0" \
-          -F "deviceLogs=true" \
-          -F "networkLogs=true"
+            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/v2/build" \
+            -F "app=${{ steps.upload-apk.outputs.app_id }}" \
+            -F "tests=${{ steps.upload-test-apk.outputs.test_id }}" \
+            -F "devices=Google Pixel 7-12.0" \
+            -F "deviceLogs=true" \
+            -F "networkLogs=true" \
+            -F "projectName=TestingDemo" \
+            -F "buildName=GitHub Actions Build"
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
