--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -58,7 +58,7 @@ jobs:
         run: |
           echo "🧪 Uploading Test APK to BrowserStack..."
           RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/upload" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
             -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk")
           
           echo "Response: $RESPONSE"
