--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -58,13 +58,13 @@ jobs:
         run: |
           echo "🧪 Uploading Test APK to BrowserStack..."
           RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/upload" \
             -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk")
           
           echo "Response: $RESPONSE"
           
           # Extract test_id from response
-          TEST_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
+          TEST_ID=$(echo $RESPONSE | grep -o '"test_url":"[^"]*"' | cut -d'"' -f4)
           
           if [ -z "$TEST_ID" ]; then
             echo "❌ Failed to get test_id from response"
