--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -58,13 +58,14 @@ jobs:
         run: |
           echo "🧪 Uploading Test APK to BrowserStack..."
           RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/upload" \
-            -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk")
+            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
+            -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk" \
+            -F "custom_id=test-apk")
           
           echo "Response: $RESPONSE"
           
-          # Extract test_id from response
-          TEST_ID=$(echo $RESPONSE | grep -o '"test_url":"[^"]*"' | cut -d'"' -f4)
+          # Extract app_url from response (same as app APK)
+          TEST_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
           
           if [ -z "$TEST_ID" ]; then
             echo "❌ Failed to get test_id from response"
