--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -28,9 +28,6 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
-      - name: Build Android Test APK
-        run: ./gradlew assembleDebugAndroidTest
-
       - name: Upload APK to BrowserStack
         id: upload-apk
         run: |
@@ -53,44 +50,26 @@ jobs:
           echo "✅ APK uploaded successfully. App ID: $APP_ID"
           echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
 
-      - name: Upload Test APK to BrowserStack
-        id: upload-test-apk
+      - name: Update Test Files with App ID
         run: |
-          echo "🧪 Uploading Test APK to BrowserStack..."
-          RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-            -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
-            -F "file=@app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk" \
-            -F "custom_id=test-apk")
+          echo "🔄 Updating test files with new app ID..."
+          APP_ID="${{ steps.upload-apk.outputs.app_id }}"
           
-          echo "Response: $RESPONSE"
+          # Update BrowserStackTest.kt
+          sed -i "s|bs://[a-zA-Z0-9]*|$APP_ID|g" app/src/androidTest/java/com/example/testingdemo/BrowserStackTest.kt
           
-          # Extract app_url from response (same as app APK)
-          TEST_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
+          # Update ButtonClickTest.kt
+          sed -i "s|bs://[a-zA-Z0-9]*|$APP_ID|g" app/src/androidTest/java/com/example/testingdemo/ButtonClickTest.kt
           
-          if [ -z "$TEST_ID" ]; then
-            echo "❌ Failed to get test_id from response"
-            echo "Full response: $RESPONSE"
-            exit 1
-          fi
-          
-          echo "✅ Test APK uploaded successfully. Test ID: $TEST_ID"
-          echo "test_id=$TEST_ID" >> $GITHUB_OUTPUT
+          echo "✅ Test files updated with app ID: $APP_ID"
 
-      - name: Run BrowserStack Tests
+      - name: Run Appium Tests on BrowserStack
         run: |
-          echo "🚀 Running tests on BrowserStack..."
+          echo "🚀 Running Appium tests on BrowserStack..."
           echo "App ID: ${{ steps.upload-apk.outputs.app_id }}"
-          echo "Test ID: ${{ steps.upload-test-apk.outputs.test_id }}"
           
-          curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
-            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/v2/build" \
-            -F "app=${{ steps.upload-apk.outputs.app_id }}" \
-            -F "tests=${{ steps.upload-test-apk.outputs.test_id }}" \
-            -F "devices=Google Pixel 7-12.0" \
-            -F "deviceLogs=true" \
-            -F "networkLogs=true" \
-            -F "projectName=TestingDemo" \
-            -F "buildName=GitHub Actions Build"
+          # Run the tests using Gradle
+          ./gradlew connectedAndroidTest
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
