--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -12,6 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      # Helpful if you want to reuse them
+      APP_APK_PATH: app/build/outputs/apk/debug/app-debug.apk
+      TEST_APK_PATH: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -28,88 +33,90 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
-      - name: Upload APK to BrowserStack
-        id: upload-apk
+      - name: Build AndroidTest APK
+        run: ./gradlew assembleDebugAndroidTest
+
+      - name: Upload App APK to BrowserStack
+        id: upload-app
         run: |
-          echo "📱 Uploading APK to BrowserStack..."
+          echo "📱 Uploading App APK to BrowserStack..."
           RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
             -X POST "https://api-cloud.browserstack.com/app-automate/upload" \
-            -F "file=@app/build/outputs/apk/debug/app-debug.apk")
-          
+            -F "file=@${{ env.APP_APK_PATH }}")
+
           echo "Response: $RESPONSE"
-          
-          # Extract app_id from response
           APP_ID=$(echo $RESPONSE | grep -o '"app_url":"[^"]*"' | cut -d'"' -f4)
-          
           if [ -z "$APP_ID" ]; then
             echo "❌ Failed to get app_id from response"
-            echo "Full response: $RESPONSE"
             exit 1
           fi
-          
-          echo "✅ APK uploaded successfully. App ID: $APP_ID"
+          echo "✅ App uploaded: $APP_ID"
           echo "app_id=$APP_ID" >> $GITHUB_OUTPUT
 
-      - name: Skip Local Testing
+      - name: Upload Test APK to BrowserStack
+        id: upload-test
         run: |
-          echo "⏭️ Skipping local testing - tests are designed for BrowserStack cloud devices"
-          echo "📱 App uploaded to BrowserStack with ID: ${{ steps.upload-apk.outputs.app_id }}"
-          echo "🧪 To run tests, use BrowserStack dashboard or run locally with connected device"
+          echo "🧪 Uploading Test APK to BrowserStack..."
+          RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/test-suite" \
+            -F "file=@${{ env.TEST_APK_PATH }}")
 
-      - name: Upload Debug APK
+          echo "Response: $RESPONSE"
+          TEST_ID=$(echo $RESPONSE | grep -o '"test_url":"[^"]*"' | cut -d'"' -f4)
+          if [ -z "$TEST_ID" ]; then
+            echo "❌ Failed to get test_id from response"
+            exit 1
+          fi
+          echo "✅ Test APK uploaded: $TEST_ID"
+          echo "test_id=$TEST_ID" >> $GITHUB_OUTPUT
+
+      - name: Trigger Espresso tests on BrowserStack
+        run: |
+          echo "🚀 Triggering Espresso tests on BrowserStack..."
+          RESPONSE=$(curl -u "${{ secrets.BROWSERSTACK_USERNAME }}:${{ secrets.BROWSERSTACK_ACCESS_KEY }}" \
+            -X POST "https://api-cloud.browserstack.com/app-automate/espresso/v2/build" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "app": "${{ steps.upload-app.outputs.app_id }}",
+              "testSuite": "${{ steps.upload-test.outputs.test_id }}",
+              "devices": ["Google Pixel 7-12.0", "Samsung Galaxy S22-12.0"],
+              "deviceLogs": true,
+              "networkLogs": true
+            }')
+
+          echo "Response: $RESPONSE"
+
+      - name: Upload APK as Artifact (optional)
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: ${{ env.APP_APK_PATH }}
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-#      - name: Upload to Firebase App Distribution
-#        env:
-#          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
-#        run: |
-#          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
-#          firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
-#            --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
-#            --release-notes "New build from GitHub Actions" \
-#            --groups 'internal-testers'
-
-      - name: Fetch Firebase Testers
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          FIREBASE_TESTERS: ${{ secrets.FIREBASE_TESTERS }}
-        run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
-          
-          # Check if FIREBASE_TESTERS secret is set
-          if [ -z "$FIREBASE_TESTERS" ]; then
-            echo "⚠️  FIREBASE_TESTERS secret not found. Using default group 'internal-testers'"
-            echo "TESTERS=internal-testers" >> $GITHUB_ENV
-          else
-            echo "✅ FIREBASE_TESTERS found, using dynamic fetch"
-            ./fetch-firebase-testers.sh
-          fi
+      - name: Setup Firebase Service Account
+        run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase.json
 
       - name: Upload to Firebase App Distribution
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase.json
+          FIREBASE_TESTERS: ${{ secrets.FIREBASE_TESTERS }}
         run: |
-          # Check if TESTERS is a group or email list
-          if [[ "$TESTERS" == *"@"* ]]; then
-            echo "📧 Distributing to specific testers: $TESTERS"
-            firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
+          TESTERS=${{ secrets.FIREBASE_TESTERS }}
+          if [ -z "$TESTERS" ]; then
+            echo "⚠️ FIREBASE_TESTERS secret not set. Using default group 'internal-testers'"
+            firebase appdistribution:distribute ${{ env.APP_APK_PATH }} \
+              --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
+              --release-notes "New build from GitHub Actions" \
+              --groups "internal-testers"
+          else
+            echo "📧 Distributing to testers: $TESTERS"
+            firebase appdistribution:distribute ${{ env.APP_APK_PATH }} \
               --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
               --release-notes "New build from GitHub Actions" \
               --testers "$TESTERS"
-          else
-            echo "👥 Distributing to group: $TESTERS"
-            firebase appdistribution:distribute app/build/outputs/apk/debug/app-debug.apk \
-              --app 1:162093106925:android:088dfebbbdfb1d9de22ee4 \
-              --release-notes "New build from GitHub Actions" \
-              --groups "$TESTERS"
           fi
 
       - name: Cleanup
-        run: rm -f service-account-key.json
+        run: rm -f firebase.json
