--- a/.github/workflows/android-ci.yaml
+++ b/.github/workflows/android-ci.yaml
@@ -79,7 +79,7 @@ jobs:
             -d '{
               "app": "${{ steps.upload-app.outputs.app_id }}",
               "testSuite": "${{ steps.upload-test.outputs.test_id }}",
-              "devices": ["Google Pixel 7-12.0", "Samsung Galaxy S22-12.0"],
+              "devices": ["Samsung Galaxy S21"],
               "deviceLogs": true,
               "networkLogs": true
             }')
